# source_scan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Justfile  PROJECT_TECHNOLOGIES.md  README.md  lefthook.yml  pyproject.toml  sonar-project.properties
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml  pull_request_template.md
.github/actions/setup-dependencies/: action.yml
.github/other-configurations/: labeller.yml  labels.yml
.github/tool-configurations/: labeller.yml  labels.yml
.github/workflows/: clean-caches.yml  code-checks.yml  code-quality.yml  codeql-analysis.yml  dependency-review.yml  deploy-to-github-pages.yml  fuzz.yml  pull-request-tasks.yml  release-please.yml  run-scanner.yml  sync-labels.yml  unit-test.yml
16_codeql_config/: action.json  report.json
17_dependency_review/: action.json  report.json
18_daily_updates/: action.json  report.json
19_superlinter_permissions/: action.json  report.json
20_markdown_link_checker/: action.json  report.json
21_update_editorconfig_checker/: action.json  report.json
22_codeql_cron/: action.json  report.json
23_dependabot_groups/: action.json  report.json
24_remove_pinact_config/: action.json  report.json
25_zizmor_config/: action.json  report.json
26_zizmor_sarif/: action.json  report.json
27_dependabot_reusable_workflows/: action.json  report.json
28_common_sync_labels/: action.json  report.json
29_common_clear_caches/: action.json  report.json
30_dependabot_reusable_workflows/: action.json  report.json
31_migrate_to_reusable_codeql_workflow/: action.json  report.json
bump/: action.json  report.json
bump-superlinter/: action.json  report.json
bump-versions/: action.json  report.json
c4/: action.json  report.json
ci/: action.json  report.json
codeql/: report.json
common/: action.json  report.json
common2/: action.json  report.json
complete/: action.json  report.json
contributing/: action.json  report.json
dependabot/github_actions/main/github-actions-006e1c3648/: action.json  report.json
dependabot/github_actions/main/github-actions-25b351fe54/: action.json  report.json
dependabot/github_actions/main/github-actions-2b36a19af7/: action.json  report.json
dependabot/github_actions/main/github-actions-5b427ba926/: action.json  report.json
dependabot/github_actions/main/github-actions-5bde560eef/: action.json  report.json
dependabot/github_actions/main/github-actions-5fe515b291/: report.json
dependabot/github_actions/main/github-actions-6325d0f571/: action.json  report.json
dependabot/github_actions/main/github-actions-650ad351e6/: action.json  report.json
dependabot/github_actions/main/github-actions-673d3c155c/: action.json  report.json
dependabot/github_actions/main/github-actions-78f861c8ae/: action.json  report.json
dependabot/github_actions/main/github-actions-afe07e4b69/: action.json  report.json
dependabot/github_actions/main/github-actions-c96505e591/: action.json  report.json
dependabot/github_actions/main/github-actions-ced721f930/: action.json  report.json
dependabot/github_actions/main/github-actions-d6bc7fe4fd/: action.json  report.json
dependabot/github_actions/main/github-actions-d74a475201/: action.json  report.json
dependabot/github_actions/main/github-actions-e43ef839b6/: action.json  report.json
dependabot/github_actions/main/github-actions-fe547fc6fb/: action.json  (+1 more)
diagrams/: c4.py
docs/: PROJECT_TECHNOLOGIES.md  SECURITY.md
fix-zizmor-warnings/: action.json  report.json
githooks/: action.json  pre-commit  report.json
labels/: action.json  report.json
lefthook-validate/: action.json  report.json
lefthook2/: action.json  report.json
main/: codelimit.md  report.json
more-tests/: action.json  codelimit.md  report.json
mutation-tests/: action.json  report.json
pin/: action.json  report.json
pin-actions/: action.json  report.json
pin-actions2/: action.json  report.json
pinact/: action.json  report.json
public/: action.json  report.json
python-hooks/: action.json  report.json
release-please--branches--main/: report.json
remove-release-please/: action.json  report.json
scanner/: __main__.py  app.py
scanner/tests/: conftest.py  test_app.py
scanner/utils/: custom_logging.py  custom_types.py  github_interactions.py  read_markdown.py  write_markdown.py
scanner/utils/tests/: test_custom_logging.py  test_github_interactions.py  test_markdown.py  test_output_file.py  test_read_markdown.py  test_write_markdown.py
set-version/: action.json  report.json
sonarcloud/: action.json  report.json
superlinter/: action.json  report.json
tests/: action.json  report.json
tests/markdown/: test_tech_report.py
tests/ui/: test_github_pages.py  test_website.py  variables.py
ui/: action.json  report.json
update/: action.json  report.json
update-python/: action.json  report.json
update2/: action.json  report.json
update3/: action.json  report.json
update5/: action.json  report.json
update6/: action.json  codelimit.md  report.json
update7/: action.json  report.json
uv/: action.json  report.json
uv-lcok/: action.json  report.json
uv-lock/: action.json  report.json
uv-migrate/: action.json  report.json
v6/: action.json  report.json
workflow/: action.json  report.json
zizmor/: codelimit.md  report.json
(+40 files in other folders)
