[project]
name = "source-scan"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = ["structlog==25.3.0", "pygithub==2.6.1"]

[project.optional-dependencies]
dev = ["pytest==8.3.5", "pytest-cov==6.1.1", "ruff==0.11.10", "vulture==2.14"]
diagrams = ["diagrams==0.24.4", "ruff==0.11.10"]
test = ["pytest==8.3.5", "markdown2==2.5.3", "beautifulsoup4==4.13.3"]

[tool.uv]
required-version = "0.7.5"
package = false

[tool.setuptools]
py-modules = ["diagrams", "scanner", "tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
]

fixable = ["ALL"]
unfixable = []

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D101", "D102", "D103", "SLF001", "FBT001"]
"test_markdown.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["scanner", "tests"]

[tool.vulture]
ignore_names = [
  "side_effect",
  "project_name",
  "technologies",
  "badge",
  "technology_badge",
]
