[project]
name = "scanner"
dynamic = ["version"]
requires-python = "~=3.13.0"
dependencies = ["structlog==25.4.0", "pygithub==2.6.1"]

[project.optional-dependencies]
dev = [
  "beautifulsoup4==4.13.4",
  "markdown2==2.5.3",
  "playwright==1.53.0",
  "pytest-cov==6.2.1",
  "pytest-playwright==0.7.0",
  "pytest-rerunfailures==15.1",
  "pytest==8.4.1",
  "ruff==0.12.1",
  "vulture==2.14",
  "ty==0.0.1a12",
]

[tool.uv]
required-version = "0.7.16"
package = false

[tool.setuptools]
py-modules = ["scanner", "tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
  "N999",    # Ignore upstream folder names
]

fixable = ["ALL"]
unfixable = []

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D101", "D102", "D103", "SLF001", "FBT001"]
"test_markdown.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["scanner", "tests"]

[tool.vulture]
ignore_names = [
  "side_effect",
  "project_name",
  "technologies",
  "badge",
  "technology_badge",
]
